@@ -917,6 +917,8 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 2894) Enhanced Recent Changes link fixes
 * (bug 3065) Update both watched namespaces when renaming pages
 * Move parentheses out of <a> link in Special:Contributions
+* (bug 4071) Generate passwords long enough for $wgMinimalPasswordLength
+
 
 === Caveats ===
 
